--- a/MyHomework/style.css
+++ b/MyHomework/style.css
@@ -25,3 +25,24 @@
 	width: 50px;
 	height: 40px!important;
 }
+.headBackground{
+	background: url(background.png);
+}
+.headImg img{
+		width: 150px;
+		height: 150px;
+		border-radius: 50%;
+		border:5px solid;
+		-moz-transition: all 0.3s;
+		-webkit-transition: all 0.3s;
+		transition: all 0.3s;
+}
+.headImg img:hover{
+	-moz-transform: scale(1.3);
+	-webkit-transform: scale(1.3);
+	transform: scale(1.3);
+	cursor: pointer;
+}
+.tcInput{
+	width: 100px;
+}
